--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "author": "Devansh Khandelwal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
- 
