--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   "author": "Devansh Khandelwal",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "packagename": "^2.0.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
